<resources>
    <string name="app_name">PrestamosFaciles</string>

    /inicio
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="olvidaste_contra">¿Olvidaste tu contraseña?</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="iniciar_sesion">Iniciar</string>
    <string name="registrarse">Registrarse</string>

    //activity_agregar_producto
    <string name="categoria_producto">Categoría de producto</string>
    <string name="agregar_foto">agregar foto</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="descripcion_articulo">Descripción del artículo</string>
    <string name="precio_alquiler">Precio alquiler</string>
    <string name="ubicacion">Ubicación</string>
    <string name="condiciones_entrega_devolucion">Condiciones de entrega y devolución</string>
    <string name="condiciones_articulo">Condiciones dela artículo</string>
    <string name="condiciones_uso">Condiciones de uso</string>
    <string name="agregar">Agregar</string>


    //activity_agregar_tarjeta
    <string name="agregar_tarjeta">Agregar Tarjeta</string>
    <string name="selecciona_tipo_tarjeta">Selecciona el tipo de tarjeta</string>
    <string name="numero_tarjeta">Número de tarjeta</string>
    <string name="fecha_caducidad">Fecha de caducidad</string>
    <string name="codigo_seguridad">Código de seguridad</string>
    <string name="aceptar">Aceptar</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellidos">Apellidos</string>
    <string name="cp">Código postal</string>
    <string name="nulo">---</string>

    //Datos personales
    <string name="mis_datos">Mis Datos</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="guardar">Guardar</string>

    //Mis tarjetas
    <string name="mis_tarjetas">Mis Tarjetas</string>

    //Condiciones
    <string name="texto1">Tiempo de devolución y condiciones</string>
    <string name="texto2">Tienes 7 días corridos para devolverlo desde que te llegó.</string>
    <string name="localizar">Localizar</string>
    <string name="siguiente">Siguiente</string>

    //Selección
    <string name="descripcion">Descripción</string>
    <string name="detalles">Detalles</string>

    //Cuenta
    <string name="cuenta">Cuenta</string>
    <string name="configuracion_cuenta">Configuración de la cuenta</string>
    <string name="historial">Historial</string>
    <string name="privacidad">Privacidad</string>
    <string name="cerrar_cuenta">Cerrar cuenta</string>

    //Pago
    <string name="numero">Cuenta</string>
    <string name="fecha_venc">Fecha vencimiento</string>
    <string name="cvv">CVV</string>
    <string name="emisor">Emisor</string>
    <string name="subtotal">Subtotal</string>
    <string name="iva">IVA</string>
    <string name="total">Total</string>
    <string name="pagar">Pagar</string>

    //Privacidad
    <string name="texto_privacidad">Al utilizar los servicios de prestodo, usted está dando consentimiento a las prácticas descritas en este aviso de privacidad.\n\n Si tiene preguntas sobre cómo recabamos y usamos sus datos personales o sobre este aviso de privacidad, por favor póngase en contacto con nosotros.\n\nNuestros datos de contacto son:</string>
    <string name="itson_nai">ITSON Campus Náinari</string>
    <string name="correo_privacidad">atencionalcliente@prestodo.com</string>
    <string name="tel">644 259 6559</string>

    //Catálogo
    <string name="explora_catalogo">Explorar</string>

    //Rentadores
    <string name="rentadores">Rentadores</string>

    //Detalle Rentador
    <string name="rentador">Rentador</string>
        <string name="fecha_alquiler">Fecha Alquiler</string>
    <string name="fecha_vencimiento">Fecha Vencimiento</string>
    <string name="articulo">Artículo</string>
    <string name="ayuda_mis_prestamos">Aquí encontrarás información acerca de los prestamos que estás ofreciendo a los usuarios.</string>


</resources>