<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.AgregarProductoActivity"
    android:theme="@android:style/Theme.NoTitleBar"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_atras" />

        <TextView
            android:layout_width="310dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/agregar_producto"
            android:textAlignment="textStart"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/sp_categoria_producto"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btn_agregar_imagen"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_agregar_imagen"
            android:backgroundTint="@null"
            android:gravity="center"
            android:text="@string/agregar_foto"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_nombre_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/contour_rectangle"
            android:fontFamily="@font/avenir_roman"
            android:hint="@string/nombre_producto"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_descripcion"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/contour_rectangle"
            android:fontFamily="@font/avenir_roman"
            android:gravity="start"
            android:hint="@string/descripcion_articulo"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_precio_alquiler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/contour_rectangle"
            android:fontFamily="@font/avenir_roman"
            android:hint="@string/precio_alquiler"
            android:inputType="numberDecimal"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_nombre_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/contour_rectangle"
            android:fontFamily="@font/avenir_roman"
            android:hint="@string/ubicacion"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_agregar_producto"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/avenir_roman"
            android:gravity="center"
            android:text="@string/aceptar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_navMenu_Principal_Inicio"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/iv_navMenu_Principal_Perfil"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="btnMiPerfil"
                app:srcCompat="@drawable/user" />

            <ImageView
                android:id="@+id/iv_navMenu_Principal_mas"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/mas" />

            <ImageView
                android:id="@+id/iv_navMenu_Principal_Categorias"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/busqueda" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>