<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuentaActivity"
    android:theme="@android:style/Theme.NoTitleBar"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/iv_photoUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/tv_nombreUsuario"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="Usuario"
            android:enabled="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/avenir_black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_configuracionCuenta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="4dp"
        android:layout_gravity="center"
        android:text="@string/configuracion_cuenta"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:fontFamily="@font/avenir_roman"/>

    <View
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/orange"/>

    <TextView
        android:id="@+id/tv_misDatos"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:text="@string/mis_datos"
        android:fontFamily="@font/avenir_roman"
        android:textColor="@color/gray"/>

    <TextView
        android:id="@+id/tv_historial"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:text="@string/historial"
        android:fontFamily="@font/avenir_roman"
        android:textColor="@color/gray"/>


    <TextView
        android:id="@+id/tv_misTarjetas"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:onClick="cargarTarjetas"
        android:textSize="18sp"
        android:text="@string/mis_tarjetas"
        android:fontFamily="@font/avenir_roman"
        android:textColor="@color/gray"/>


    <TextView
        android:id="@+id/tv_privacidad"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:text="@string/privacidad"
        android:fontFamily="@font/avenir_roman"
        android:textColor="@color/gray"/>

    <TextView
        android:id="@+id/tv_cerrarSesion"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:text="@string/cerrar_cuenta"
        android:fontFamily="@font/avenir_roman"
        android:textColor="@color/gray"/>

    <View
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:background="@color/orange"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_navMenu_cuenta_Inicio"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="btnHome"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/iv_navMenu_cuenta_Perfil"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/user" />

            <ImageView
                android:id="@+id/iv_navMenu_cuenta_mas"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/mas" />

            <ImageView
                android:id="@+id/iv_navMenu_cuenta_Categorias"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/busqueda" />
        </LinearLayout>
    </RelativeLayout>



</LinearLayout>