<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.RentadorDetallesActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_atras"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/avenir_roman"
            android:text="@string/rentador"
            android:textAlignment="textStart"
            android:textSize="25sp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_textview"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_black"
                android:hint="@string/usuario"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/tv_usuario"
                android:layout_width="267dp"
                android:layout_height="50dp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_roman"
                android:hint="aaaa"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_black"
                android:hint="@string/fecha_alquiler"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/tv_fecha_alquiler"
                android:layout_width="216dp"
                android:layout_height="50dp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_roman"
                android:hint="dd/mm/aaaa"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_black"
                android:hint="@string/fecha_vencimiento"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/tv_fecha_vencimiento"
                android:layout_width="178dp"
                android:layout_height="50dp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_roman"
                android:hint="dd/mm/aaaa"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_black"
                android:hint="@string/articulo"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/tv_articulo"
                android:layout_width="267dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_roman"
                android:hint="aaaa"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagen_articulo"
                android:layout_width="wrap_content"
                android:layout_height="171dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_black"
                android:hint="@string/fecha_vencimiento"
                android:src="@drawable/user"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_descripcion_articulo"
                android:layout_width="match_parent"
                android:layout_height="171dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_roman"
                android:hint="aaaaaaaaaaaaaaaaaaaaaaaaaa"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="163dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_black"
                android:gravity="right"
                android:hint="@string/total"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/avenir_roman"
                android:hint="0000.00"
                android:textSize="18sp" />



        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_productoEntregado"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_button"
        android:text="Marcar como \nEntregado"
        android:textSize="20dp"
        android:visibility="invisible"
        android:fontFamily="@font/avenir_black"
        android:textColor="@color/white"/>

</LinearLayout>